<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:id="@+id/profilePic"
            android:src="@drawable/user"
            android:scaleType="fitCenter"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profilePic"
            android:id="@+id/userInfo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:paddingBottom="30dp"
            android:background="@drawable/background_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="@string/driver_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverPhone"
                android:layout_below="@+id/driverName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:text="@string/driver_phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/driverPhone"
                android:textSize="18sp"
                android:text="@string/driver_email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/driverLicense"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:textSize="18sp"
                android:layout_below="@+id/driverEmail"
                android:text="LHR 01 7777"/>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userInfo"
            android:id="@+id/signOut"
            android:layout_centerHorizontal="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/blue_rounded_button"
            android:textColor="@color/colorWhite"
            android:text="@string/sign_out"/>

    </RelativeLayout>

</ScrollView>
